kubernetes/plex/01-namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
