kubernetes/plex/03-service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
    - name: admin
      protocol: TCP
      port: 32400
      targetPort: admin
