kubernetes/plex/ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  rules:
    - host: plex.${DOMAIN_ROOT}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  name: admin
